examples/istio-objects/itzuli-adm-eu-es-gw.yaml
kind: Gateway
apiVersion: networking.istio.io/v1beta1
metadata:
  name: itzuli-adm-eu-es-gw
  namespace: istio-sandbox
spec:
  servers:
    - port:
        number: 80
        protocol: HTTP
        name: http-itzuli-adm-eu-es
      hosts:
        - itzuli-adm-eu-es.istio-ingressgateway-istio-system
  selector:
    istio: ingressgateway
