examples/istio-objects/itzuli-gateway.yaml
kind: Gateway
apiVersion: networking.istio.io/v1beta1
metadata:
  name: itzuli-gateway
  namespace: istio-system
spec:
  servers:
    - port:
        number: 80
        protocol: HTTP
        name: http-itzuli
      hosts:
        - itzuli.istio-ingressgateway-istio-system
    istio: ingressgateway
