examples/istio-objects/itzuli-adm-eu-es-dr.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1beta1
metadata:
  name: itzuli-adm-eu-es-dr
  namespace: istio-sandbox
spec:
  host: itzuli-adm-eu-es
  subsets:
    - name: stable
      labels:
        version: stable
    - name: rc
      labels:
        version: rc
