examples/istio-objects/itzuli-adm-eu-es-vs.yaml
kind: VirtualService
apiVersion: networking.istio.io/v1beta1
metadata:
  name: itzuli-adm-eu-es-vs
  namespace: istio-sandbox 
spec:
  hosts:
    - itzuli-adm-eu-es.istio-ingressgateway-istio-system
  gateways:
    - istio-sandbox/itzuli-adm-eu-es-gw
  http:
    - match:
        - uri:
            prefix: /adm/eu2es
      route:
        - destination:
            host: itzuli-adm-eu-es
            subset: stable
            port:
              number: 8080
          weight: 100
      rewrite:
        uri: ' '
      mirror:
        host: itzuli-adm-eu-es
        subset: rc
        port:
          number: 8080
      mirrorPercentage:
        value: 100
